# llm-workflow-engine

./: .flake8  .gitignore  .readthedocs.yaml  CHATGPT_WRAPPER.md  COMMIT_LOG.md  Dockerfile  ISSUES.md  LWE.md  License  README.md  SUPPORT.md  config.sample.yaml  demo.py  docker-compose.yml  docker-entrypoint.sh  postinstall.sh  pyproject.toml  requirements.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: codeql.yml  pypi.yml  python-app.yml  python-build.yml
chatgpt_wrapper/: __init__.py  asyncChatGPT.py  awesome.py  backend.py  browser.py  browser_shell.py  chatgpt.py  config.py  constants.py  debug.py  editor.py  error.py  gpt_api.py  gpt_shell.py  log.py  logger.py  main.py  openai_api.py  plugin.py  plugin_manager.py
chatgpt_wrapper/core/: backend.py  config.py  constants.py  editor.py  logger.py  plugin.py  plugin_manager.py  preset.py  preset_manager.py  provider.py  provider_manager.py  repl.py  template.py  util.py  workflow.py  workflow_manager.py
chatgpt_wrapper/openai/: api.py  api_shell.py  conversation.py  database.py  message.py  orm.py  repl.py  test_data.py  user.py
chatgpt_wrapper/plugins/: awesome.py  data_query.py  database.py  echo.py  provider_ai21.py  provider_chat_openai.py  provider_chatgpt_browser.py  provider_cohere.py  provider_huggingface_hub.py  provider_openai.py  shell.py  test.py  workflow.py  zap.py
chatgpt_wrapper/templates/: workflow-spec-generator.md
docs/: conf.py  configuration.rst  development.rst  docker.rst  functions.rst  how_it_works.rst  index.rst  initial_setup.rst  installation.rst  lwe.backends.api.rst  lwe.backends.api.schema.rst  lwe.backends.api.workflow.action_plugins.rst  lwe.backends.api.workflow.library.rst  lwe.backends.api.workflow.rst  lwe.backends.browser.rst  lwe.backends.rst  lwe.core.rst  lwe.plugins.rst  lwe.rst  model_access.rst  modules.rst  plugins.rst  presets.rst  python_module.rst  requirements.in  requirements.txt  shell.rst  substitutions.rst  templates.rst  tools.rst  troubleshooting.rst  upgrading.rst  workflows.rst
examples/api/: temperature_check.py
examples/functions/: reverse_content.py  store_sentiment_and_topics.py
examples/presets/: gpt-4-exploratory-code-writing.yaml  turbo-16k-code-generation.yaml  turbo.yaml
examples/templates/: example-code-documentation.md  example-code-generator.md  example-code-refactor.md  example-code-spec-generator.md  example-coding-gpt-chain-of-thought-collaboration.md  example-prompt-engineer.md  example-voicemail-sentiment-analysis.md  prompt-engineer.md  refactor-code.md  summarize-conversation.md
examples/workflows/: example-analyze-voicemail-transcriptions-process-row.yaml  example-analyze-voicemail-transcriptions.yaml  example-iterative-task.yaml  example-iterative.yaml  example-persona-generator-create-characteristics.yaml  example-persona-generator-create-persona.yaml  example-persona-generator.yaml  example-saved-conversation.yaml  example-summarize-content.yaml  iterative-task-include.yaml  llm-iterative-tasks.yaml  llm-question-answer-feedback-answer.yaml  llm-social-media-content-generator.yaml
lwe/: __init__.py  debug.py  gpt_api.py  main.py  version.py
lwe/core/: async_compat.py  backend.py  cache_manager.py  config.py  constants.py  doc_parser.py  editor.py  error.py  function.py  function_cache.py  function_manager.py  logger.py  monkey_patch.py  plugin.py  plugin_manager.py  preset_manager.py  provider.py  provider_manager.py  repl.py  template.py  template_manager.py  token_manager.py  tool.py  tool_cache.py  util.py  (+2 more)
misc/: slide-presentation.md
research/: 001-enhancing-ansible-automation-through-integration-of-large-language-models.md  README.md
scripts/: create-schema-revision.py  generate-changelog-entries.sh  release-pypi.sh  test_tool_calling.py  tool_calling_stub.py
tests/: api_test.py  base.py  conftest.py  count-test-asserts.py  example_api_call.py  test_api_get_history_chatgpt.py  test_api_non_streaming_chatgpt.py  test_api_streaming_chatgpt.py  test_async_chatgpt.py  test_sync_chatgpt.py  util.py
(+145 files in other folders)
