[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-workflow-engine"
dynamic = ["version"]
description = "CLI tool and workflow manager for common LLMs"
readme = "README.md"
authors = [
    {name = "Mahmoud Mabrouk", email = "mahmoudmabrouk.mail@gmail.com"},
    {name = "Chad Phillips"}
]
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansible>=8.0",
    "ansible-core>=2.15",
    "alembic",
    "beautifulsoup4",
    "docutils>=0.20.1",
    "email-validator",
    "Jinja2",
    "kreuzberg",
    "langchain>=1.0.8,<2",
    "langchain-core>=1.0.6,<2",
    "langchain-community>=0.4.1,<0.5",
    "langchain_openai>=0.3.29",
    "names",
    "numexpr>=2.8.4",
    "openpyxl",
    "pdfminer.six",
    "prompt-toolkit",
    "pymupdf4llm",
    "pyperclip",
    "python-frontmatter",
    "PyYAML",
    "rich",
    "setuptools",
    "sqlalchemy>=1.4.48",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-datadir",
    "pip-tools",
    "flake8",
    "black",
]

[project.urls]
Homepage = "https://github.com/llm-workflow-engine/llm-workflow-engine"
Repository = "https://github.com/llm-workflow-engine/llm-workflow-engine"

[project.scripts]
lwe = "lwe.main:main"

[project.entry-points."lwe_plugins"]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"lwe" = [
    "backends/api/schema/alembic.ini",
    "backends/api/schema/alembic/*",
    "backends/api/schema/alembic/**/*",
    "backends/api/workflow/*.cfg",
    "backends/api/workflow/*.yaml",
    "examples/*",
    "examples/**/*",
    "tools/*",
    "tools/**/*",
    "presets/*",
    "presets/**/*",
    "templates/*",
    "templates/**/*",
    "workflows/*",
    "workflows/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "lwe.version.__version__"}

[tool.black]
line-length = 100
